--- a/CRNpp/src/Compiler/Compiler.fsproj
+++ b/CRNpp/src/Compiler/Compiler.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Ast.fs" />
     <Compile Include="Parser.fs" />
+    <Compile Include="Interpreter.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
