--- a/CRNpp/src/Compiler/Compiler.fsproj
+++ b/CRNpp/src/Compiler/Compiler.fsproj
@@ -15,4 +15,8 @@
     <PackageReference Include="FParsec" Version="1.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChemicalEngine\ChemicalEngine.fsproj" />
+  </ItemGroup>
+
 </Project>
