Playing with simulation errors and rendering plots

--- a/CRNpp/src/Compiler/Compiler.fsproj
+++ b/CRNpp/src/Compiler/Compiler.fsproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ChemicalEngine\ChemicalEngine.fsproj" />
+    <ProjectReference Include="..\Rendering\Rendering.fsproj" />
   </ItemGroup>
 
 </Project>
