--- a/CRNpp/src/Compiler/Compiler.fsproj
+++ b/CRNpp/src/Compiler/Compiler.fsproj
@@ -7,7 +7,7 @@
     <Compile Include="Ast.fs" />
     <Compile Include="Parser.fs" />
     <Compile Include="ModuleExamples.fs" />
-    <Compile Include="Interpreter.fs" />
+    <Compile Include="BasicInterpreter.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
