--- a/CRNpp/src/ChemicalEngine/ChemicalEngine.fsproj
+++ b/CRNpp/src/ChemicalEngine/ChemicalEngine.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="Reaction.fs" />
     <Compile Include="Simulator.fs" />
     <Compile Include="Modules.fs" />
+    <Compile Include="FakeClockSimulator.fs" />
     <Compile Include="Checks.fs" />
   </ItemGroup>
   <ItemGroup>
