--- a/CRNpp/src/ChemicalEngine/ChemicalEngine.fsproj
+++ b/CRNpp/src/ChemicalEngine/ChemicalEngine.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="Clock.fs" />
     <Compile Include="Reaction.fs" />
     <Compile Include="CRN.fs" />
+    <Compile Include="Parser.fs" />
     <Compile Include="Command.fs" />
     <Compile Include="Simulator.fs" />
     <Compile Include="Modules.fs" />
@@ -15,5 +16,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="fscheck" Version="2.16.5" />
+    <PackageReference Include="FParsec" Version="1.1.1" />
   </ItemGroup>
 </Project>
