added tree drawer

--- a/CRNpp/src/Compiler/Compiler.fsproj
+++ b/CRNpp/src/Compiler/Compiler.fsproj
@@ -21,5 +21,6 @@
   <ItemGroup>
     <ProjectReference Include="..\ChemicalEngine\ChemicalEngine.fsproj" />
     <ProjectReference Include="..\Rendering\Rendering.fsproj" />
+    <ProjectReference Include="..\DrawingTrees\DrawingTrees.fsproj" />
   </ItemGroup>
 </Project>
